{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 9,
  "lineage": "fbcd0ab9-d686-b3ea-5dcf-0940391bc1ea",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kafka_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9092"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-12T01:42:58.600-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pdd2-496716/global/firewalls/stun-monitor-kafka-internal",
            "log_config": [],
            "name": "stun-monitor-kafka-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
            "priority": 1000,
            "project": "pdd2-496716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/firewalls/stun-monitor-kafka-internal",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "stun-monitor"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "stun-monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.stun_monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-12T01:42:58.921-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pdd2-496716/global/firewalls/stun-monitor-ssh",
            "log_config": [],
            "name": "stun-monitor-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
            "priority": 1000,
            "project": "pdd2-496716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/firewalls/stun-monitor-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "stun-monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.stun_monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "agent-au",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/australia-southeast1-a/disks/agent-au"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pdd2-496716/zones/australia-southeast1-a/instances/agent-au",
            "instance_id": "3323440839065499769",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "role": "agent",
              "ssh-keys": "piotr:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICb1pJpFdegnQ6H5QYrulMEGa83/4k2aWMrk+nEtgKRq ps.korcz@student.uw.edu.pl\n"
            },
            "metadata_fingerprint": "UVFTjSfCCpU=",
            "name": "agent-au",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.151.155.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
                "network_ip": "10.152.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/regions/australia-southeast1/subnetworks/stun-monitor-network",
                "subnetwork_project": "pdd2-496716"
              }
            ],
            "project": "pdd2-496716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/australia-southeast1-a/instances/agent-au",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "agent",
              "stun-monitor"
            ],
            "tags_fingerprint": "zfM3UdOoGIA=",
            "zone": "australia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.stun_monitor"
          ]
        },
        {
          "index_key": "agent-jp",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/asia-northeast1-a/disks/agent-jp"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pdd2-496716/zones/asia-northeast1-a/instances/agent-jp",
            "instance_id": "1829571443089111163",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "role": "agent",
              "ssh-keys": "piotr:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICb1pJpFdegnQ6H5QYrulMEGa83/4k2aWMrk+nEtgKRq ps.korcz@student.uw.edu.pl\n"
            },
            "metadata_fingerprint": "UVFTjSfCCpU=",
            "name": "agent-jp",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.190.235.11",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
                "network_ip": "10.146.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/regions/asia-northeast1/subnetworks/stun-monitor-network",
                "subnetwork_project": "pdd2-496716"
              }
            ],
            "project": "pdd2-496716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/asia-northeast1-a/instances/agent-jp",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "agent",
              "stun-monitor"
            ],
            "tags_fingerprint": "zfM3UdOoGIA=",
            "zone": "asia-northeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.stun_monitor"
          ]
        },
        {
          "index_key": "agent-pl",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/europe-central2-a/disks/agent-pl"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pdd2-496716/zones/europe-central2-a/instances/agent-pl",
            "instance_id": "2799349628024551548",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "role": "agent",
              "ssh-keys": "piotr:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICb1pJpFdegnQ6H5QYrulMEGa83/4k2aWMrk+nEtgKRq ps.korcz@student.uw.edu.pl\n"
            },
            "metadata_fingerprint": "UVFTjSfCCpU=",
            "name": "agent-pl",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.140.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
                "network_ip": "10.186.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/regions/europe-central2/subnetworks/stun-monitor-network",
                "subnetwork_project": "pdd2-496716"
              }
            ],
            "project": "pdd2-496716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/europe-central2-a/instances/agent-pl",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "agent",
              "stun-monitor"
            ],
            "tags_fingerprint": "zfM3UdOoGIA=",
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.stun_monitor"
          ]
        },
        {
          "index_key": "agent-us",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/us-central1-a/disks/agent-us"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pdd2-496716/zones/us-central1-a/instances/agent-us",
            "instance_id": "4331380572930078843",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "role": "agent",
              "ssh-keys": "piotr:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICb1pJpFdegnQ6H5QYrulMEGa83/4k2aWMrk+nEtgKRq ps.korcz@student.uw.edu.pl\n"
            },
            "metadata_fingerprint": "UVFTjSfCCpU=",
            "name": "agent-us",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.143.41",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/regions/us-central1/subnetworks/stun-monitor-network",
                "subnetwork_project": "pdd2-496716"
              }
            ],
            "project": "pdd2-496716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/us-central1-a/instances/agent-us",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "agent",
              "stun-monitor"
            ],
            "tags_fingerprint": "zfM3UdOoGIA=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.stun_monitor"
          ]
        },
        {
          "index_key": "central-pl",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/europe-central2-a/disks/central-pl"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pdd2-496716/zones/europe-central2-a/instances/central-pl",
            "instance_id": "8482957173117581436",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "role": "central",
              "ssh-keys": "piotr:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICb1pJpFdegnQ6H5QYrulMEGa83/4k2aWMrk+nEtgKRq ps.korcz@student.uw.edu.pl\n"
            },
            "metadata_fingerprint": "qxS5-SYEqTE=",
            "name": "central-pl",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.41.87",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/regions/europe-central2/subnetworks/stun-monitor-network",
                "subnetwork_project": "pdd2-496716"
              }
            ],
            "project": "pdd2-496716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/zones/europe-central2-a/instances/central-pl",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "central",
              "stun-monitor"
            ],
            "tags_fingerprint": "B56QBocKh3g=",
            "zone": "europe-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.stun_monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "stun_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pdd2-496716/global/networks/stun-monitor-network",
            "mtu": 0,
            "name": "stun-monitor-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4705407851441846460",
            "project": "pdd2-496716",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pdd2-496716/global/networks/stun-monitor-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}